--- a/404.html
+++ b/404.html
@@ -160,13 +160,13 @@ flicker.init('.flicker', 1, 10, 40);
 <span style="color: #888888;">)</span>
 <br>
 
-</p>
-<p class="flicker">
+<br>
 
+<h1 class="flicker">
 <span style="color: #992525;">Returned error: 404
 
-</p>
-<p class="flicker">
+
+<br>
 
 <b><em>PageUnfoundError: requested url refused connection</em></b></span>
 
