--- a/mc.html
+++ b/mc.html
@@ -64,7 +64,7 @@ body {
 </head>
 
 <body bgcolor="#000015">
-<p align="center"><font size="+3"><span style="color: #ccccff">Unfair Don't Take Damage</span></font><br><font size="+1"><span style="color: #ccccff">Created By: Conure_Steve</span></font></p>
+<p align="center"><font size="+3"><span style="color: #ccccff">Title Here</span></font><br><font size="+1"><span style="color: #ccccff">Subtitle Here</span></font></p>
 <div id="demo-container">
 	<button id="download-button">Load File</button>
 	<div id="download-ui-container">
@@ -75,7 +75,7 @@ body {
 </div>
 
 <script>
-var myFile = "download/§4Unfair\ §EDon\'t\ §6Take\ §CDamage§7.zip";
+var myFile = "gnet27.ml/files/test/archive.zip";
 var _OBJECT_URL;
 
 document.querySelector('#download-button').addEventListener('click', function() {
