--- a/mc.html
+++ b/mc.html
@@ -75,7 +75,7 @@ body {
 </div>
 
 <script>
-var myFile = "http://gnet27.ml/files/test/archive.zip";
+var myFile = "http://gnet27.ml/files/test/p201.png";
 var _OBJECT_URL;
 
 document.querySelector('#download-button').addEventListener('click', function() {
