--- a/mc.html
+++ b/mc.html
@@ -1,121 +1,54 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400' rel='stylesheet' type='text/css'>
-<style type="text/css">
-
-body {
-	margin: 0;
-	font-family: "Titillium Web";
-	font-size: 15px;
-}
-
-#demo-container {
-	width: 400px;
-	margin: 60px auto;
-}
-
-#download-button {
-	background-color: "#000015";
-	color: #2980b9;
-	border: 2px solid #2980b9;
-	font-family: inherit;
-	outline: none;
-	min-width: 100px;
-	padding: 10px;
-	font-size: inherit;
-	border-radius: 2px;
-	cursor: pointer;
-	display: block;
-	margin: 0 auto;
-}
-
-#start-download {
-	text-align: center;
-	display: none;
-}
-
-#download-progress-container {
-	border: 1px solid #cccccc;
-	padding: 4px;
-	display: none;
-	height: 20px;
-}
-
-#download-progress {
-	background-color: #2980b9;
-	display: inline-block;
-	height: 100%;
-}
-
-#save-file {
-	color: #2980b9;
-	text-decoration: none;
-	display: none;
-	text-align: center;
-}
-
-#save-file:hover {
-	text-decoration: underline;
-}
-
-</style>
-</head>
-
-<body bgcolor="#000015">
-<p align="center"><font size="+3"><span style="color: #ccccff">Title Here</span></font><br><font size="+1"><span style="color: #ccccff">Subtitle Here</span></font></p>
-<div id="demo-container">
-	<button id="download-button">Load File</button>
-	<div id="download-ui-container">
-		<div id="start-download">Loading File...</div>
-		<div id="download-progress-container"><div id="download-progress"></div></div>
-		<a id="save-file">Download File</a>
-	</div>
+<a class="download" href="#platforms"></a>
+<div class="platforms" id="platforms">
+	<a href="#windows" data-os="windows"></a>
+	<a href="#mac" data-os="mac"></a>
+	<a href="#linux" data-os="linux"></a>
 </div>
-
-<script>
-var myFile = "https://gnet27.ml/files/test/archive.zip";
-var _OBJECT_URL;
-
-document.querySelector('#download-button').addEventListener('click', function() {
-	var request = new XMLHttpRequest();
-    request.addEventListener('readystatechange', function(e) {
-    	if(request.readyState == 2 && request.status == 200) {
-    		document.querySelector('#start-download').style.display = 'block';
-    		document.querySelector('#download-button').style.display = 'none';
-    	}
-    	else if(request.readyState == 3) {
-    		document.querySelector('#download-progress-container').style.display = 'block';
-    		document.querySelector('#start-download').style.display = 'none';
-    	}
-    	else if(request.readyState == 4) {
-    		_OBJECT_URL = URL.createObjectURL(request.response);
-
-    		document.querySelector('#save-file').setAttribute('href', _OBJECT_URL);
-    		document.querySelector('#save-file').setAttribute('download', myFile);
-    		
-    		document.querySelector('#save-file').style.display = 'block';
-    		document.querySelector('#download-progress-container').style.display = 'none';
-
-    		setTimeout(function() {
-    			window.URL.revokeObjectURL(_OBJECT_URL);
-
-    			document.querySelector('#download-button').style.display = 'block';
-    			document.querySelector('#save-file').style.display = 'none';
-    		}, 60*1000);
-    	}
-    });
-    request.addEventListener('progress', function(e) {
-    	var percent_complete = (e.loaded / e.total)*100;
-    	document.querySelector('#download-progress').style.width = percent_complete + '%';
-    });
-    request.responseType = 'blob';
-    request.open('get',myFile); 
-    request.send(); 
-});
-
-</script>
-
-</body>
-</html>
+<div class="installer" id="windows">
+	<div class="info" data-weight="753 KB"></div>
+	<div class="details">
+		<p>Windows installer</p>
+		<span>Version 1.0.6</span>
+		<ul>
+			<li>Name: §4Unfair §EDon't §6Take §CDamage§7.zip</li>
+			<li>Type: Archive.ZIP</li>
+			<li>Size: Unknown</li>
+			<li>Creator: Conure_Steve</li>	
+		</ul>
+	</div>
+	<label for="progressWindows"><input type="radio" id="progressWindows"/><span></span></label>
+	<a class="back" href="#platforms"></a>
+	<a class="close" href="#"></a>
+</div>
+<div class="installer" id="mac">
+	<div class="info" data-weight="634 KB"></div>
+	<div class="details">
+		<p>Mac installer</p>
+		<span>Version 1.0.6</span>
+		<ul>
+			<li>Name: §4Unfair §EDon't §6Take §CDamage§7.zip</li>
+			<li>Type: Archive.ZIP</li>
+			<li>Size: Unknown</li>
+			<li>Creator: Conure_Steve</li>		
+		</ul>
+	</div>
+	<label for="progressMac"><input type="radio" id="progressMac"/><span></span></label>
+	<a class="back" href="#platforms"></a>
+	<a class="close" href="#"></a>
+</div>
+<div class="installer" id="linux">
+	<div class="info" data-weight="781 KB"></div>
+	<div class="details">
+		<p>Linux installer</p>
+		<span>Version 1.0.6</span>
+		<ul>
+			<li>Name: §4Unfair §EDon't §6Take §CDamage§7.zip</li>
+			<li>Type: Archive.ZIP</li>
+			<li>Size: Unknown</li>
+			<li>Creator: Conure_Steve</li>			
+		</ul>
+	</div>
+	<label for="progressLinux"><input type="radio" id="progressLinux"/><span></span></label>
+	<a class="back" href="#platforms"></a>
+	<a class="close" href="#"></a>
+</div>
