--- a/mc.html
+++ b/mc.html
@@ -46,7 +46,7 @@ a { text-decoration: none; }
 	content: 'DOWNLOAD';
 }
 .download:after {
-	content: 'Click to select a platform';
+	content: 'Select Map';
 	top: -60px;
 	opacity: 0;
 }
@@ -410,7 +410,7 @@ a { text-decoration: none; }
 <body>
 <a class="download" href="#platforms"></a>
 <div class="platforms" id="platforms">
-	<a href="#windows" data-os="windows"></a>
+	<a href="#windows" data-os="windows">https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Windows_logo_-_2012_derivative.svg/2000px-Windows_logo_-_2012_derivative.svg.png</a>
 	<a href="#mac" data-os="mac"></a>
 	<a href="#linux" data-os="linux"></a>
 </div>
