--- a/mc.html
+++ b/mc.html
@@ -267,18 +267,13 @@ body {
   line-height: 90%;
 }
 
-    </style>
-
-  
-  
-  
-  
+</style>
 
 </head>
 
 <body translate="no" >
 
-  <body>
+<body>
 <p align="center"><font size="+5">Conure_Steve Maps</font><br><font size="+3">For Minecraft</font></p>
 <div class="container">
   <div class="row">
@@ -419,6 +414,9 @@ body {
 <script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 <script src='//bilbo.surge.sh/codepen/download-cards/jquery.qrcode.min.js'></script>
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/153256/credits.js'></script>
+
+<a href="https://totobird.cf" target="_blank" class="credits">Totobird</a>
+<a href="https://totobird.cf" target="_blank" class="credits">totobird.cf</a>
 
 <script>
 var download1 = "https://totobird.cf/download/§4Unfair §EDon't §6Take §CDamage§7.zip";
