--- a/mc.html
+++ b/mc.html
@@ -305,7 +305,7 @@ body {
                 <h3 class="use-for faint">QR Code</h3>
               </div>
               <div class="content">
-                <div id="qrIos" class="qr text-center"><canvas width="200" height="200"></canvas></div>
+                <div id="qrIos" class="qr text-center"><canvas width="200" height="200" margin="0"></canvas></div>
               </div>
               <div class="footer">
                 <button class="btn btn-flip" onclick="rotateCard(this)">
@@ -346,7 +346,7 @@ body {
                 <h3 class="use-for faint">Unavailable</h3>
               </div>
               <div class="content">
-                <div id="qrAndroid" class="qr text-center"><canvas width="200" height="200"></canvas></div>
+                <div id="qrAndroid" class="qr text-center"><canvas width="200" height="200" margin="0"></canvas></div>
               </div>
               <div class="footer">
                 <button class="btn btn-flip" rel="tooltip" title="Flip Card" onclick="rotateCard(this)">
@@ -388,7 +388,7 @@ body {
                 <h3 class="use-for faint">Unavailable</h3>
               </div>
               <div class="content">
-                <div id="qrWeb" class="qr text-center"><canvas width="200" height="200"></canvas></div>
+                <div id="qrWeb" class="qr text-center"><canvas width="200" height="200" margin="0"></canvas></div>
               </div>
               <div class="footer">
                 <button class="btn btn-flip" rel="tooltip" title="Flip Card" onclick="rotateCard(this)">
