--- a/mc.html
+++ b/mc.html
@@ -1,14 +1,19 @@
-<html lang="en" class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"><head>
+
+
+<!DOCTYPE html>
+<html lang="en" >
+
+<head>
 
   <meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/x-icon" href="https://static.codepen.io/assets/favicon/favicon-8ea04875e70c4b0bb41da869e81236e54394d63638a1ef12fa558a4a835f1164.ico">
-  <link rel="mask-icon" type="" href="https://static.codepen.io/assets/favicon/logo-pin-f2d2b6d2c61838f7e76325261b7195c27224080bc099486ddd6dccb469b8e8e6.svg" color="#111">
+  <link rel="shortcut icon" type="image/x-icon" href="https://static.codepen.io/assets/favicon/favicon-8ea04875e70c4b0bb41da869e81236e54394d63638a1ef12fa558a4a835f1164.ico" />
+  <link rel="mask-icon" type="" href="https://static.codepen.io/assets/favicon/logo-pin-f2d2b6d2c61838f7e76325261b7195c27224080bc099486ddd6dccb469b8e8e6.svg" color="#111" />
   <title>CodePen - MCMapDownload</title>
   
   
   
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
+<link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
 
       <style>
       * {
@@ -264,13 +269,18 @@ body {
   line-height: 90%;
 }
 
-</style>
+    </style>
 
-<link rel="stylesheet" type="text/css" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/153256/credits.css"></head>
+  
+  
+  
+  
 
-<body translate="no">
+</head>
 
+<body translate="no" >
 
+  <body>
 <p align="center"><font size="+5">Conure_Steve Maps</font><br><font size="+3">For Minecraft</font></p>
 <div class="container">
   <div class="row">
@@ -281,12 +291,12 @@ body {
           <div class="card">
             <div class="front">
               <div class="cover">
-                <img src="https://bilbo.surge.sh/codepen/download-cards/apple.png">
+                <img src="https://bilbo.surge.sh/codepen/download-cards/apple.png" />
               </div>
               <div class="branded">
                 <!--span class="fa fa-apple"></span-->
                 <br>
-                <img src="https://totobird.cf/sources/halfHeart.png" width="100px" height="100px">
+                <img src="https://totobird.cf/sources/halfHeart.png" width=100px height=100px>
               </div>
               <div class="content">
                 <div class="main">
@@ -305,7 +315,7 @@ body {
                 <h3 class="use-for faint">QR Code</h3>
               </div>
               <div class="content">
-                <div id="qrIos" class="qr text-center"><canvas width="200" height="200" margin="0"></canvas></div>
+                <div id="qrIos" class="qr text-center"></div>
               </div>
               <div class="footer">
                 <button class="btn btn-flip" onclick="rotateCard(this)">
@@ -323,10 +333,10 @@ body {
           <div class="card">
             <div class="front">
               <div class="cover">
-                <img src="https://bilbo.surge.sh/codepen/download-cards/android.png">
+                <img src="https://bilbo.surge.sh/codepen/download-cards/android.png" />
               </div>
               <div class="branded">
-                <img src="https://totobird.cf/sources/error.png" width="100px" height="100px">
+                <img src="https://totobird.cf/sources/error.png" width=100px height=100px>
               </div>
               <div class="content">
                 <div class="main">
@@ -346,7 +356,7 @@ body {
                 <h3 class="use-for faint">Unavailable</h3>
               </div>
               <div class="content">
-                <div id="qrAndroid" class="qr text-center"><canvas width="200" height="200" margin="0"></canvas></div>
+                <div id="qrAndroid" class="qr text-center"></div>
               </div>
               <div class="footer">
                 <button class="btn btn-flip" rel="tooltip" title="Flip Card" onclick="rotateCard(this)">
@@ -365,10 +375,10 @@ body {
           <div class="card">
             <div class="front">
               <div class="cover">
-                <img src="https://bilbo.surge.sh/codepen/download-cards/web.png">
+                <img src="https://bilbo.surge.sh/codepen/download-cards/web.png" />
               </div>
               <div class="branded">
-                <img src="https://totobird.cf/sources/error.png" width="100px" height="100px">
+                <img src="https://totobird.cf/sources/error.png" width=100px height=100px>
               </div>
               <div class="content">
                 <div class="main">
@@ -388,7 +398,7 @@ body {
                 <h3 class="use-for faint">Unavailable</h3>
               </div>
               <div class="content">
-                <div id="qrWeb" class="qr text-center"><canvas width="200" height="200" margin="0"></canvas></div>
+                <div id="qrWeb" class="qr text-center"></div>
               </div>
               <div class="footer">
                 <button class="btn btn-flip" rel="tooltip" title="Flip Card" onclick="rotateCard(this)">
@@ -404,15 +414,18 @@ body {
     </section>
   </div>
 </div>
+</body>
+  
+  <script src='//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
+<script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
+<script src='//bilbo.surge.sh/codepen/download-cards/jquery.qrcode.min.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/153256/credits.js'></script>
 
   
-<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="//bilbo.surge.sh/codepen/download-cards/jquery.qrcode.min.js"></script>
 
-<script>
-var download1 = "https://totobird.cf/download/§4Unfair §EDon't §6Take §CDamage§7.zip";
+    <script >
+      var download1 = "https://totobird.cf/download/§4Unfair §EDon't §6Take §CDamage§7.zip";
 var download2 = window.location.href;
 var download3 = window.location.href;
 
@@ -455,8 +468,15 @@ function dwld2() {
 function dwld3() {
   location.replace(download3);
 };
-</script>
+    </script>
 
-<script src="https://static.codepen.io/assets/editor/live/css_reload-5619dc0905a68b2e6298901de54f73cefe4e079f65a75406858d92924b4938bf.js"></script>
 
-</body></html>
+
+  
+  
+
+  <script src="https://static.codepen.io/assets/editor/live/css_reload-5619dc0905a68b2e6298901de54f73cefe4e079f65a75406858d92924b4938bf.js"></script>
+</body>
+
+</html>
+ 
