--- a/mc.html
+++ b/mc.html
@@ -420,7 +420,7 @@ body {
 <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 <script src='//bilbo.surge.sh/codepen/download-cards/jquery.qrcode.min.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/153256/credits.js'></script>
+<!--script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/153256/credits.js'></script-->
 
   
 
