--- a/terminal.html
+++ b/terminal.html
@@ -1,25 +1,466 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
-<html>
+
+
+<!DOCTYPE html>
+<html lang="en" >
+
 <head>
-    <title>Terminal</title>
-    <meta name="description" content="Totobird Terminal">
-    <meta name="keywords" content="totobird.ml/terminal">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script type="text/javascript">
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-23441223-3']);
-        _gaq.push(['_setDomainName', 'none']);
-        _gaq.push(['_setAllowLinker', true]);
-        _gaq.push(['_trackPageview']);
-        (function() { var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
+
+  <meta charset="UTF-8">
+  <link rel="shortcut icon" type="image/x-icon" href="https://static.codepen.io/assets/favicon/favicon-8ea04875e70c4b0bb41da869e81236e54394d63638a1ef12fa558a4a835f1164.ico" />
+  <link rel="mask-icon" type="" href="https://static.codepen.io/assets/favicon/logo-pin-f2d2b6d2c61838f7e76325261b7195c27224080bc099486ddd6dccb469b8e8e6.svg" color="#111" />
+  <title>CodePen - terminalGuest</title>
+  
+  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+  
+      <style>
+      html, body {
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
+  background: #000010;
+  background-image: -webkit-radial-gradient(top, circle cover, #500000 0%, #250000 80%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+textarea, input, button {
+  outline: none;
+}
+
+.window-button, .window .buttons .close, .window .buttons .minimize, .window .buttons .maximize {
+  padding: 0;
+  margin: 0;
+  margin-right: 4px;
+  width: 12px;
+  height: 12px;
+  background-color: gainsboro;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.window {
+  animation: bounceIn 1s ease-in-out;
+  width: 750px;
+}
+.window .handle {
+  height: 22px;
+  background: linear-gradient(0deg, #d8d8d8, #ececec);
+  border-top: 1px solid white;
+  border-bottom: 1px solid #b3b3b3;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  color: rgba(0, 0, 0, 0.7);
+  font-family: Helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 22px;
+  text-align: center;
+}
+.window .buttons {
+  position: absolute;
+  float: left;
+  margin: 0 8px;
+}
+.window .buttons .close {
+  background-color: #ff6159;
+}
+.window .buttons .minimize {
+  background-color: #ffbf2f;
+}
+.window .buttons .maximize {
+  background-color: #25cc3e;
+}
+.window .terminal {
+  padding: 4px;
+  background-color: black;
+  opacity: 0.7;
+  height: 378px;
+  color: white;
+  font-family: 'Source Code Pro', monospace;
+  font-weight: 200;
+  font-size: 14px;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  overflow-y: auto;
+}
+.window .terminal::after {
+  content: "|";
+  animation: blink 2s steps(1) infinite;
+}
+
+.prompt {
+  color: #bde371;
+}
+
+.path {
+  color: #5ed7ff;
+}
+
+@keyframes blink {
+  50% {
+    color: transparent;
+  }
+}
+@keyframes bounceIn {
+  0% {
+    transform: translateY(-1000px);
+  }
+  60% {
+    transform: translateY(200px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+    </style>
+
+  
+  
+  
+  
+
 </head>
-<frameset rows="*">
-<frame frameborder=0 src="https://s.codepen.io/toto-bird/debug/WLpXRJ/gaAeYZDBeojA" name="dot_tk_frame_content" scrolling="auto" noresize>
-</frameset>
+
+<body translate="no" >
+
+  <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:200' rel='stylesheet' type='text/css'>
+<div class="container">
+		<div class="window">
+				<div class="handle">
+						<div class="buttons">
+								<button class="close">	
+							</button>
+								<button class="minimize">
+								</button>
+								<button class="maximize">
+								</button
+</body>
+</html>
+                        </div>
+						<span class="title"></span>
+				</div>
+				<div class="terminal"></div>
+		</div>
+</div>
+  
+  <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+  
+
+    <script >
+      /*
+//	Original code by Marcus Bizal
+//	Edited by George P. & Kyle J.
+//  Backup JS http://bit.ly/2Cn4QBI
+*/
+
+var audio = new Audio('https://totobird.cf/sources/winterIsComing.mp3');
+var played = "false"
+
+$(document).ready(function() {
+		"use strict";
+
+		// UTILITY
+		function getRandomInt(min, max) {
+				return Math.floor(Math.random() * (max - min)) + min;
+		}
+		// END UTILITY
+
+		// COMMANDS
+		function reset() {
+				terminal.text("");
+		}
+
+		function help() {
+				terminal.append(`
+auth:          Log In
+
+echo:          Return Arguments
+
+exit:          Close Terminal
+
+fortune:       Return Fortune
+
+help:          List Commands
+
+ls:            List Resporities
+               Stop All Processes
+play:          Play Music
+
+rdir:          Redirect To Arguments
+
+reset:         Clear Screen
+
+stop:          Stop Music
+
+`);
+		}
+	
+	function play() {
+		audio.play();
+		played = "true"
+		}
+	
+	function stop() {
+		if (played == "true") {
+			audio.pause();
+		}else{ 	terminal.append("Audio not played\n");
+		}
+		
+		played = "false"
+	}
+	
+	function ls() {
+				terminal.append("Permission Denied\n");
+		}
+	
+	function dns() {
+				terminal.append("Permission Denied\n");
+	}
+	
+	function exit() {
+				window.close()
+		}
+	
+	function contact() {
+				terminal.append("Permission Denied\n");
+		}
+	
+	function dns_help() {
+				terminal.append("Permission Denied\n");
+		}
+	
+		function echo(args) {
+				var str = args.join(" ");
+				terminal.append(str + "\n");
+		}
+
+		function fortune() {
+				var xhr = new XMLHttpRequest();
+				xhr.open('GET', 'https://raw.githubusercontent.com/bmc/fortunes/master/fortunes', false);
+				xhr.send(null);
+
+				if (xhr.status === 200) {
+						var fortunes = xhr.responseText.split("%");
+						var fortune = fortunes[getRandomInt(0, fortunes.length)].trim();
+						terminal.append(fortune + "\n");
+				}
+		}
+	
+		function rdir(args) {
+				var str = args.join(" ");
+				terminal.append("Redirecting to: \"" + str + "\"\n");
+				window.location.replace(str);
+		}
+	
+		function auth() {
+				terminal.append("Password required for auth:\n>>> \n");
+				window.location.replace("https://s.codepen.io/toto-bird/debug/VqbMqJ/xnrabNVBYDnA");
+		}
+		// END COMMANDS
+
+		var title = $(".title");
+		var terminal = $(".terminal");
+		var prompt = "➜";
+		var path = "~";
+
+		var commandHistory = [];
+		var historyIndex = 0;
+
+		var command = "";
+		var commands = [{
+						"name": "reset",
+						"function": reset
+				}, {
+					"name": "exit",
+						"function": exit
+				}, {
+					"name": "contact",
+						"function": contact
+				}, {
+					"name": "ls",
+						"function": ls
+					}, {
+					"name": "stop",
+						"function": stop
+				}, {
+					"name": "play",
+						"function": play
+				}, {
+					"name": "help",
+						"function": help
+					}, {	
+					"name": "dns_help",
+						"function": dns_help
+					}, {	
+					"name": "dns",
+						"function": dns
+				}, {
+						"name": "fortune",
+						"function": fortune
+				}, {
+						"name": "echo",
+						"function": echo
+				}, {
+						"name": "rdir",
+						"function": rdir
+				},{
+						"name": "auth",
+						"function": auth
+				}];
+
+function processCommand() {
+		var isValid = false;
+
+		// Create args list by splitting the command
+		// by space characters and then shift off the
+		// actual command.
+
+		var args = command.split(" ");
+		var cmd = args[0];
+		args.shift();
+
+		// Iterate through the available commands to find a match.
+		// Then call that command and pass in any arguments.
+		for (var i = 0; i < commands.length; i++) {
+				if (cmd === commands[i].name) {
+						commands[i].function(args);
+						isValid = true;
+						break;
+				}
+		}
+
+		// No match was found...
+		if (!isValid) {
+				terminal.append("zsh: command not found: " + command + "\n");
+		}
+
+		// Add to command history and clean up.
+		commandHistory.push(command);
+		historyIndex = commandHistory.length;
+		command = "";
+}
+
+function displayPrompt() {
+		terminal.append("<span class=\"prompt\">" + prompt + "</span> ");
+		terminal.append("<span class=\"path\">" + path + "</span> ");
+}
+
+// Delete n number of characters from the end of our output
+function erase(n) {
+		command = command.slice(0, -n);
+		terminal.html(terminal.html().slice(0, -n));
+}
+
+function clearCommand() {
+		if (command.length > 0) {
+				erase(command.length);
+		}
+}
+
+function appendCommand(str) {
+		terminal.append(str);
+		command += str;
+}
+
+/*
+	//	Keypress doesn't catch special keys,
+	//	so we catch the backspace here and
+	//	prevent it from navigating to the previous
+	//	page. We also handle arrow keys for command history.
+	*/
+
+$(document).keydown(function(e) {
+		e = e || window.event;
+		var keyCode = typeof e.which === "number" ? e.which : e.keyCode;
+
+		// BACKSPACE
+		if (keyCode === 8 && e.target.tagName !== "INPUT" && e.target.tagName !== "TEXTAREA") {
+				e.preventDefault();
+				if (command !== "") {
+						erase(1);
+				}
+		}
+
+		// UP or DOWN
+		if (keyCode === 38 || keyCode === 40) {
+				// Move up or down the history
+				if (keyCode === 38) {
+						// UP
+						historyIndex--;
+						if (historyIndex < 0) {
+								historyIndex++;
+						}
+				} else if (keyCode === 40) {
+						// DOWN
+						historyIndex++;
+						if (historyIndex > commandHistory.length - 1) {
+								historyIndex--;
+						}
+				}
+
+				// Get command
+				var cmd = commandHistory[historyIndex];
+				if (cmd !== undefined) {
+						clearCommand();
+						appendCommand(cmd);
+				}
+		}
+});
+
+$(document).keypress(function(e) {
+		// Make sure we get the right event
+		e = e || window.event;
+		var keyCode = typeof e.which === "number" ? e.which : e.keyCode;
+
+		// Which key was pressed?
+		switch (keyCode) {
+				// ENTER
+				case 13:
+						{
+								terminal.append("\n");
+
+								processCommand();
+								displayPrompt();
+								break;
+						}
+				default:
+						{
+								appendCommand(String.fromCharCode(keyCode));
+						}
+		}
+});
+
+// Set the window title
+title.text("guest@totobird.cf: ~ (bash)");
+
+// Display last-login and promt
+terminal.append("Relogged as guest on \"totobird.cf/terminal\"\n"); displayPrompt();
+});
+    </script>
+
+
+
+  
+  
+
+  <script src="https://static.codepen.io/assets/editor/live/css_reload-5619dc0905a68b2e6298901de54f73cefe4e079f65a75406858d92924b4938bf.js"></script>
+</body>
+
+</html>
+ 
