--- a/terminal.html
+++ b/terminal.html
@@ -268,7 +268,7 @@ stop:          Stop Music
 	
 		function auth() {
 				terminal.append("Password required for auth:\n>>> \n");
-				window.location.replace("https://stotobird.cf/terminal/login");
+				window.location.replace("https://totobird.cf/terminal/login");
 		}
 		// END COMMANDS
 
